nlw/share/skin/s3/css/screen.css
/* ... */
/* Social bookmarking tabs */
#exploreTabs {
    border-bottom: 1px solid #676767;
    height: 25px;
}
#exploreTabs ul {
    position: relative;
    top: 5px;
    padding-left: 38px;
}
#exploreTabs .tab {
    float: left;
    margin-left: 8px;
    position: relative;

    text-align: center;
    background-color:#DDDDDD;
    border: 1px solid #AAAAAA;
    border-bottom: 1px solid #676767;
    color: #000000;
    cursor: pointer;
    padding: 2px;
    width: 110px;
    height: 15px;

    /* Rounded cornders */
    -webkit-border-top-left-radius: 5px;
    -webkit-border-top-right-radius: 5px;
    -moz-border-radius-topleft: 5px;
    -moz-border-radius-topright: 5px;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}
#exploreTabs .selected {
    background-color: #FFF;
    border: 1px solid #676767;
    border-bottom: 1px solid #FFF;
    color: #3366CC;
    cursor: default;
    font-weight: bold;
}
#exploreTopTags {
    border-bottom: 1px solid #676767;
    background-color: #FFF;
    text-align: center;
    padding: 4px 0;
}

#st-signal-this-frame {
    min-height: 120px;
    -height: 120px; /* For IE6 */
}

#st-signal-this-frame .loader {
    margin-top: 55px;
}

